apt-clone (0.2.3) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * apt_clone.py:
    - fix restoring of the clone with later apt versions (thanks
      to Colin Watson)
    - bind mount /proc, /sys on restore to chroot (thanks to
      Colin Watson)

  [ Colin Watson ]
  * Port to Python 3:
    - Use Python 3-style print functions.
    - Use "raise Exception(value)" syntax rather than the old-style "raise
      Exception, value".
    - Use dict.items() rather than dict.iteritems().

  [ Evan Dandrea ]
  * Finish port to Python 3:
    - Handle unicode changes.
    - Do not leak file descriptors.
    - Test against both Python2.7 and Python3.
    - Do not use the deprecated failUnless.
    - Use the io module instead of StringIO.
    - Fix a failing test caused by acpi-support being in main.

  [ Stéphane Graber ]
  * Python 3 port:
    - Update packaging to build using python3
    - Update all the headers to use /usr/bin/python3

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 12 Jun 2012 15:58:34 -0400

apt-clone (0.2.2) unstable; urgency=low

  * fix extraction of no-longer downloadable debs, thanks
    to Gaurav Saxena for the patch! (closes: #637247)
  * fix python-argparse dependency, thanks to Adrian Bunk
    (closes: Bug#653517)

 -- Michael Vogt <mvo@debian.org>  Mon, 02 Jan 2012 17:55:49 +0100

apt-clone (0.2.1) unstable; urgency=low

  * apt-clone:
    - improve --help output (closes: #641864), thanks to
      Rogerio. Brito
  * apt-clone.8:
    - add simple man page
  * apt_clone.py:
    - fix tar prefix detection

 -- Michael Vogt <mvo@debian.org>  Wed, 19 Oct 2011 14:54:15 +0200

apt-clone (0.2) unstable; urgency=low

  * Initial release (Closes: #622868).

 -- Alessio Treglia <alessio@debian.org>  Wed, 08 Jun 2011 00:49:05 +0200